examples/invalid/assign-to-void.ra
func test(): void {
  a = 1;
}

func main(): void {
  a = test();
}
